:construction: users: add base sign up implementation
